test/files/pos/chang/Test.scala
object Test extends App {
  new com.netgents.hello.Outer[String]
}
