test/files/neg/t5544/Test_2.scala
object Test extends App {
  Api.baz
}
